# bizspot-ai-design

./: .env.example  .gitattributes  .gitignore  API_SETUP_GUIDE.md  DATA_CONNECTION_REPORT.md  GOAL_PROGRESS.md  PLAN_REPORT.md  README.md  WEB_ARCHITECTURE_AND_FEATURES.md  WEB_VERIFICATION_REPORT.md  pyproject.toml  requirements.txt  유형별_참고자료_정리_박시훈.md  학술논문_초고_작성자료_박시훈.md
config/: data_manifest.yaml  project_config.yaml
frontend/: .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/api/: _aiPrompt.js  health.js
frontend/api/ai/: recommend.js
frontend/public/data/: assistant_recommendation_context_filtered.json  candidates_balanced.json  candidates_by_industry.json  district_summary.json  explanation_rules.json  grid_scores.json  industry_recommendations_filtered.json  model_metrics.json  v9_data_quality.json  validation_summary.json
frontend/src/: App.jsx  styles.css
scripts/: 00_scan_data.py  01_prepare_legal_code.py  02_prepare_store_info.py  03_prepare_land_price.py  04_prepare_transport.py  05_collect_optional_apis.py  06_build_features.py  08_run_shap_explain.py  09_export_web_data.py  10_generate_report.py  generate_v8_full_report.py  prepare_v9_web_data.py  run_all.py  run_v8_experiment.py
server/: .env.example  aiPrompt.js  package-lock.json  package.json  server.js
src/bizspot/: __init__.py  pipeline.py  v8_experiment.py
web/: app.js  index.html  styles.css
web/data/: candidates.json  district_summary.json  feature_importance.json  model_metrics.json  validation_summary.json
(+20 files in other folders)
