[project]
name = "bizspot-ai"
version = "0.1.0"
description = "Gwangju small-business location suitability proxy modeling pipeline"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

